fit the model to the data and forcast for the next 365 days

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -76,7 +76,22 @@
     "    m = Prophet(yearly_seasonality=yearly_seasonality,\n",
     "                    daily_seasonality=daily_seasonality,\n",
     "                    holidays=holidays,\n",
-    "                    changepoint_prior_scale=changepoint_prior_scale)\n"
+    "                    changepoint_prior_scale=changepoint_prior_scale)\n",
+    "\n",
+    "    # Fit the model to stock data\n",
+    "    m.fit(stock_data)\n",
+    "\n",
+    "    # Forecast for the next 365 days\n",
+    "    future = m.make_future_dataframe(periods=365)\n",
+    "    forecast = m.predict(future)\n",
+    "\n",
+    "    # Plot forecast\n",
+    "    fig = m.plot(forecast)\n",
+    "    plt.title(f'Forecast for {stock_name}')\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Return the forecast for further analysis\n",
+    "    return forecast"
    ]
   }
  ],
