Added a function to iterate over all stocks

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +92,26 @@
     "\n",
     "    # Return the forecast for further analysis\n",
     "    return forecast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to iterate over all stocks and forecast their prices\n",
+    "def forecast_stocks(symbols, start_date='2015-01-01'):\n",
+    "    for symbol in symbols:\n",
+    "        print(f\"Processing stock: {symbol}\")\n",
+    "        # Fetch stock data\n",
+    "        stock_data = fetch_stock_data(symbol, start_date)\n",
+    "\n",
+    "        # Train Prophet model\n",
+    "        forecast = train_prophet(stock_data, symbol)\n",
+    "\n",
+    "        # Save the forecast as CSV\n",
+    "        forecast.to_csv(f'forecast_{symbol}.csv', index=False)"
    ]
   }
  ],
