Added Customize Prophet parameter

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -113,6 +113,19 @@
     "        # Save the forecast as CSV\n",
     "        forecast.to_csv(f'forecast_{symbol}.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Customize Prophet parameters (you can tweak them in the notebook)\n",
+    "yearly_seasonality = True\n",
+    "daily_seasonality = False\n",
+    "holidays = None  # You can define holidays if needed\n",
+    "changepoint_prior_scale = 0.05  # Control the flexibility of the model"
+   ]
   }
  ],
  "metadata": {
