Loop over the s&p500 stocks and train the model for each stock

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -692,6 +692,27 @@
     "# Print the list of top 100 stock symbol\n",
     "sp500_table"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for symbol in sp500_table:\n",
+    "    try:\n",
+    "      print(f\"Processing stock: {symbol}\")\n",
+    "      # Fetch stock data\n",
+    "      stock_data = fetch_stock_data(symbol)\n",
+    "\n",
+    "      # Train Prophet model\n",
+    "      forecast = train_prophet(stock_data, symbol)\n",
+    "\n",
+    "      # Save the forecast as CSV\n",
+    "      forecast.to_csv(f'forecast_{symbol}.csv', index=False)\n",
+    "    except Exception as e:\n",
+    "      print(f\"Error processing stock {symbol}: {e}\")"
+   ]
   }
  ],
  "metadata": {
