--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,19 @@
     "import asyncio\n",
     "import websockets\n",
     "import requests\n",
-    "from alpaca_trade_api.rest import REST, TimeFrame"
+    "from alpaca_trade_api.rest import REST, TimeFrame\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "APCA_API_KEY_ID = os.getenv('APCA_API_KEY_ID')\n",
+    "APCA_API_SECRET_KEY = os.getenv('APCA_API_SECRET_KEY')\n"
    ]
   }
  ],
