--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
     "APCA_API_KEY_ID = os.getenv('APCA_API_KEY_ID')\n",
-    "APCA_API_SECRET_KEY = os.getenv('APCA_API_SECRET_KEY')\n"
+    "APCA_API_SECRET_KEY = os.getenv('APCA_API_SECRET_KEY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpaca = REST(APCA_API_KEY_ID, APCA_API_SECRET_KEY, base_url=\"https://paper-api.alpaca.markets\")"
    ]
   }
  ],
