--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -28,11 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "alpaca = REST(APCA_API_KEY_ID, APCA_API_SECRET_KEY, base_url=\"https://paper-api.alpaca.markets\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws_url = \"wss://stream.data.alpaca.markets/v1beta1/news\""
    ]
   }
  ],
