Authenticate with Alpaca's WebSocket

--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -43,6 +43,29 @@
    "source": [
     "ws_url = \"wss://stream.data.alpaca.markets/v1beta1/news\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def authenticate_and_subscribe(ws):\n",
+    "    # Authenticate with Alpaca's WebSocket\n",
+    "    auth_msg = {\n",
+    "        \"action\": \"auth\",\n",
+    "        \"key\": APCA_API_KEY_ID,\n",
+    "        \"secret\": APCA_API_SECRET_KEY\n",
+    "    }\n",
+    "    await ws.send(json.dumps(auth_msg))\n",
+    "\n",
+    "    # Subscribe to all news feeds\n",
+    "    subscribe_msg = {\n",
+    "        \"action\": \"subscribe\",\n",
+    "        \"news\": [\"*\"]  # [\"TSLA\"] for specific stocks\n",
+    "    }\n",
+    "    await ws.send(json.dumps(subscribe_msg))"
+   ]
   }
  ],
  "metadata": {
