Added a handle message function

--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,32 @@
     "        \"news\": [\"*\"]  # [\"TSLA\"] for specific stocks\n",
     "    }\n",
     "    await ws.send(json.dumps(subscribe_msg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def handle_message(message):\n",
+    "    print(f\"Message received: {message}\")\n",
+    "    current_event = json.loads(message)[0]\n",
+    "\n",
+    "    if current_event.get(\"T\") == \"n\":  # Check if it's a news event\n",
+    "        headline = current_event.get(\"headline\")\n",
+    "        ticker_symbol = current_event.get(\"symbols\")[0]\n",
+    "\n",
+    "        # Make trades based on the impact score\n",
+    "        # if company_impact >= 70:  # Buy stock\n",
+    "        order = alpaca.submit_order(\n",
+    "            symbol=ticker_symbol,\n",
+    "            qty=1,\n",
+    "            side='buy',\n",
+    "            type='market',\n",
+    "            time_in_force='day'\n",
+    "        )\n",
+    "        "
    ]
   }
  ],
