Added a close position

--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -90,7 +90,9 @@
     "            type='market',\n",
     "            time_in_force='day'\n",
     "        )\n",
-    "        "
+    "        print(f\"Order placed: {order}\")\n",
+    "        closed_position = alpaca.close_position(ticker_symbol)\n",
+    "        print(f\"Position closed: {closed_position}\")"
    ]
   }
  ],
