Added main function

--- a/Trading Bots/testBot.ipynb
+++ b/Trading Bots/testBot.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,29 @@
     "        print(f\"Order placed: {order}\")\n",
     "        closed_position = alpaca.close_position(ticker_symbol)\n",
     "        print(f\"Position closed: {closed_position}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def main():\n",
+    "    async with websockets.connect(ws_url) as ws:\n",
+    "        await authenticate_and_subscribe(ws)\n",
+    "\n",
+    "        async for message in ws:\n",
+    "            await handle_message(message)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "        loop = asyncio.get_running_loop()\n",
+    "    except RuntimeError:  # No event loop is running\n",
+    "        loop = asyncio.new_event_loop()\n",
+    "        asyncio.set_event_loop(loop)\n",
+    "\n",
+    "    loop.run_until_complete(main())\n"
    ]
   }
  ],
