--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -4378,6 +4378,7 @@
    ],
    "source": [
     "MAX_TOKENS = 512\n",
+    "from datetime import datetime\n",
     "for stock in sp500_table:\n",
     "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\"\n",
     "    response = requests.get(url, headers=headers)\n",
