--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -4379,6 +4379,7 @@
    "source": [
     "MAX_TOKENS = 512\n",
     "from datetime import datetime\n",
+    "api_url = \"http://your-laravel-app.com/api/sentiment-analysis\"\n",
     "for stock in sp500_table:\n",
     "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\"\n",
     "    response = requests.get(url, headers=headers)\n",
