--- a/Trading Bots/MoneyMaker.ipynb
+++ b/Trading Bots/MoneyMaker.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "import matplotlib.pyplot as plt\n",
+    "import alpaca_trade_api as tradeapi\n",
+    "from ta.momentum import RSIIndicator\n",
+    "from ta.trend import SMAIndicator, EMAIndicator\n",
+    "import datetime as dt\n"
+   ]
   }
  ],
  "metadata": {
