--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -1316,7 +1316,7 @@
     "MAX_TOKENS = 512\n",
     "from datetime import datetime\n",
     "api_url = \"http://127.0.0.1:8000/api/sentiment-analysis\"\n",
-    "for stock in ['AAL']:\n",
+    "for stock in sp500_table:\n",
     "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\"\n",
     "    response = requests.get(url, headers=headers)\n",
     "    if response.status_code == 200:\n",
