Added ML model for all stocks

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -718,7 +718,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import yfinance as yf\n",
+    "from prophet import Prophet\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# List of 500 S&P stock symbols (example with only a few)\n",
+    "import pandas as pd\n",
+    "\n",
+    "# URL of the Wikipedia page containing the S&P 500 list\n",
+    "url = 'https://en.wikipedia.org/wiki/List_of_S%26P_500_companies'\n",
+    "\n",
+    "# Scrape the data from the first table on the page\n",
+    "sp500_table = pd.read_html(url)[0]\n",
+    "\n",
+    "# Sort by Symbol (or you could sort by Market Cap if you have that data)\n",
+    "sp500_table = sp500_table.head(500)  # Top 100 based on their order in the table\n",
+    "\n",
+    "# Extract the list of stock symbols\n",
+    "sp500_table = sp500_table['Symbol'].tolist()\n",
+    "\n",
+    "# Replace 'BRK.B' with 'BRK-B'\n",
+    "sp500_table = [symbol.replace('.', '-') for symbol in sp500_table]\n",
+    "\n",
+    "def train_and_save_forecast(stock_symbol):\n",
+    "    # Download stock data from Yahoo Finance\n",
+    "    df = yf.download(stock_symbol, start='2020-01-01')\n",
+    "    df = df.reset_index()\n",
+    "    df.columns = ['ds', 'Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume']\n",
+    "\n",
+    "    # Train Prophet model\n",
+    "    model = Prophet()\n",
+    "    model.fit(df[['ds', 'Close']].rename(columns={'Close': 'y'}))\n",
+    "\n",
+    "    # Make future predictions\n",
+    "    future = model.make_future_dataframe(periods=365)\n",
+    "    forecast = model.predict(future)\n",
+    "\n",
+    "    # Plot and save the figure\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    model.plot(forecast)\n",
+    "    plt.title(f\"Forecast for {stock_symbol}\")\n",
+    "\n",
+    "    # Save plot as an image\n",
+    "    image_path = f\"/content/{stock_symbol}_forecast.png\"  # Path in Colab\n",
+    "    plt.savefig(image_path,bbox_inches='tight', dpi=600)\n",
+    "    plt.close()\n",
+    "\n",
+    "    return image_path\n",
+    "\n",
+    "# Train and save forecasts for each stock\n",
+    "image_paths = []\n",
+    "for symbol in sp500_table:\n",
+    "    image_paths.append(train_and_save_forecast(symbol))\n",
+    "\n",
+    "# Download the images to your local machine if needed\n",
+    "from google.colab import files\n",
+    "for path in image_paths:\n",
+    "    files.download(path)\n"
+   ]
   }
  ],
  "metadata": {
